--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="ltr" prefix="og: http://ogp.me/ns#" lang="en">
+<html dir="ltr" prefix="og: http://ogp.me/ns#" lang="es">
   <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
   <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
   <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -9,35 +9,26 @@
 
     <head>
       <meta charset="utf-8" />
-      <title>Azordev | Home | Software Services</title>
+      <title>Azordev | Servicios de Software</title>
       <link rel="preload" href="css/style.css" as="style" />
       <meta property="og:title" content="Azordev | Software Services" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="http://azordev.com" />
-      <meta
-        property="og:image"
-        content="http://azordev.com/img/logo-white.png"
-      />
+      <meta property="og:image" content="http://azordev.com/img/logo-white.png" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-      <meta
-        name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no"
-      />
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <link rel="canonical" href="http://azordev.com" />
       <meta name="theme-color" content="#06A2E1" />
       <meta name="apple-mobile-web-app-capable" content="yes" />
-      <meta name="title" content="Azordev | Home | Software Services " />
-      <meta
-        name="description"
-        content="Find the best tech services the we have for you!"
-      />
+      <meta name="title" content="Azordev | Servicios de Software" />
+      <meta name="description" content="Descubre los mejores servicios tecnologicos que podemos ofrecerte" />
       <meta
         name="keywords"
-        content="software, service, optimization, optimizar, code, startup, latinoamericana"
+        content="software, service, servicio, optimization, optimizar, code, codigo, programacion, startup, latinoamericana"
       />
       <meta name="robots" content="index, follow" />
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <meta name="language" content="English" />
+      <meta name="language" content="Spanish" />
       <meta name="revisit-after" content="45 days" />
       <meta name="author" content="Israel Laguan" />
       <link rel="shortcut icon" href="asset/azordev.png" />
@@ -45,9 +36,7 @@
       <link rel="stylesheet" href="css/main.css" />
     </head>
     <body>
-      <div id="preloader-background">
-        <div class="preloader"></div>
-      </div>
+      <div id="preloader-background"><div class="preloader"></div></div>
       <header>
         <h1 hidden>Azordev Software</h1>
         <nav>
@@ -56,33 +45,30 @@
             <h1>AZORDEV</h1>
           </a>
           <ul class="nav-links">
-            <li class="nav-item"><a href="#">Home</a></li>
-            <li class="nav-item"><a href="#">conocenos</a></li>
-            <li class="nav-item"><a href="#">Portafolio</a></li>
-            <li class="nav-item"><a href="#">Servicios</a></li>
-            <li class="nav-item"><a href="#">blog</a></li>
-            <li class="nav-item"><a href="#">Contactanos</a></li>
+            <li class="nav-item"><a href="#">HOME</a></li>
+            <li class="nav-item"><a href="#">CONOCENOS</a></li>
+            <li class="nav-item"><a href="#">PORTAFOLIO</a></li>
+            <li class="nav-item"><a href="#">SERVICIOS</a></li>
+            <li class="nav-item"><a href="#">BLOG</a></li>
+            <li class="nav-item"><a href="#">CONTACTANOS</a></li>
           </ul>
         </nav>
       </header>
       <main>
         <div class="hero">
-          <div class="hero__title">
-            <h1>
-              BIENVENIDO A AZORDEV
-            </h1>
-            <p>
-              Estamos aquí porque queremos ayudarte a mejorar la calidad de tu
-              empresa. Mediante diferentes sistemas de mayor alcance y que te
-              ayude a gestionar mejor el flujo de información que proporciona el
-              gran armado comercial que conlleva una empresa exitosa
-            </p>
-          </div>
+            <div class="hero__container">
+              <div class="hero__title">
+                <h1>BIENVENIDO A AZORDEV</h1>
+                <p>
+                  Estamos aquí porque queremos ayudarte a mejorar la calidad de tu empresa. Mediante diferentes sistemas de mayor
+                  alcance y que te ayude a gestionar mejor el flujo de información que proporciona el gran armado comercial que
+                  conlleva una empresa exitosa
+                </p>
+              </div>
+            </div>
         </div>
         <div class="services">
-          <div class="services__header">
-            <h1></h1>
-          </div>
+          <div class="services__header"><h1></h1></div>
           <div class="services__cardGroups">
             <div class="servicesCard"></div>
             <div class="servicesCard"></div>
