--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 </p>
               </div>
             </div>
+            <div class="hero__transparent"></div>
         </div>
         <div class="services">
           <div class="services__header"><h1></h1></div>
