Added section why us

--- a/index.html
+++ b/index.html
@@ -56,25 +56,68 @@
       </header>
       <main>
         <div class="hero">
-            <div class="hero__container">
-              <div class="hero__title">
-                <h1>BIENVENIDO A AZORDEV</h1>
-                <p>
-                  Estamos aquí porque queremos ayudarte a mejorar la calidad de tu empresa. Mediante diferentes sistemas de mayor
-                  alcance y que te ayude a gestionar mejor el flujo de información que proporciona el gran armado comercial que
-                  conlleva una empresa exitosa
-                </p>
-              </div>
+          <div class="hero__container">
+            <div class="hero__title">
+              <h2>BIENVENIDO A</h2>
+              <h1>AZORDEV</h1>
+              <p>
+                Estamos aquí porque queremos ayudarte a mejorar la calidad de tu empresa. Mediante diferentes sistemas de mayor
+                alcance y que te ayude a gestionar mejor el flujo de información que proporciona el gran armado comercial que
+                conlleva una empresa exitosa
+              </p>
             </div>
-            <div class="hero__transparent"></div>
+          </div>
+          <div class="hero__transparent"></div>
         </div>
         <div class="services">
-          <div class="services__header"><h1></h1></div>
+          <div class="services__header">
+            <h4>NUESTROS</h4>
+            <h1>SERVICIOS</h1>
+          </div>
           <div class="services__cardGroups">
-            <div class="servicesCard"></div>
-            <div class="servicesCard"></div>
-            <div class="servicesCard"></div>
-            <div class="servicesCard"></div>
+            <div class="servicesCard">
+              <img src="asset/Services/WebPages.png" alt="webpages" />
+              <h1>Diseno Web</h1>
+            </div>
+            <div class="servicesCard">
+              <img src="asset/Services/Marketing.png" alt="marketing" />
+              <h1>Marketing Digital</h1>
+            </div>
+            <div class="servicesCard">
+              <img src="asset/Services/Development.png" alt="development" />
+              <h1>Desarrollo de Software</h1>
+            </div>
+            <div class="servicesCard">
+              <img src="asset/Services/Apps.png" alt="Apps" />
+              <h1>Aplicaciones Moviles</h1>
+            </div>
+          </div>
+        </div>
+        <div class="whyUs">
+          <div class="whyUs__explain">
+            <h3>¿Porqué</h3>
+            <h1>Nosotros?</h1>
+            <p>Queremos que tus proyectos digitales estén en buenas manos y que alcancen el mejor nivel en el mercado.</p>
+            <p>Nosotros nos encargamos que tus ideas se hagan realidad.</p>
+            <button>Contactanos</button>
+          </div>
+          <div class="whyUs__image"><img src="asset/Home/WhyUs.png" alt="why us" /></div>
+        </div>
+        <div class="projects">
+          <div class="title">
+            <h3>Nuestros</h3>
+            <h1>Proyectos</h1>
+          </div>
+          <div class="info">
+            <div class="image"><img src="asset/Home/CodeiceBrain.png" alt="codice brain" /></div>
+            <div class="explain">
+              <img src="asset/Home/Codice.png" alt="codice" />
+              <p>
+                Es un proyecto encargado de hacer estudios de experiencia de usuario mediante las sitios webs, de esta forma
+                validar su funcionalidad y crear una mejor interacción de los clientes, con esta.
+              </p>
+              <a href="#">Conocer mas</a>
+            </div>
           </div>
         </div>
       </main>
