Added project section and little fixes

--- a/index.html
+++ b/index.html
@@ -104,13 +104,15 @@
           <div class="whyUs__image"><img src="asset/Home/WhyUs.png" alt="why us" /></div>
         </div>
         <div class="projects">
-          <div class="title">
-            <h3>Nuestros</h3>
-            <h1>Proyectos</h1>
+          <div class="projects__title">
+            <div>
+              <h4>Nuestros</h4>
+              <h1>Proyectos</h1>
+            </div>
           </div>
-          <div class="info">
-            <div class="image"><img src="asset/Home/CodeiceBrain.png" alt="codice brain" /></div>
-            <div class="explain">
+          <div class="projects__info">
+            <div class="projects__image"><img src="asset/Home/CodeiceBrain.png" alt="codice brain" /></div>
+            <div class="projects__explain">
               <img src="asset/Home/Codice.png" alt="codice" />
               <p>
                 Es un proyecto encargado de hacer estudios de experiencia de usuario mediante las sitios webs, de esta forma
