Fixes navbar issues

--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
             </div>
           </div>
         </div>
+        <div class="contact">
+          <div class="contact__card">
+            <p class="contact__explain">
+              Si deseas ver tus oportunidades de crear tus proyectos digitales con nosotros, puedes comunicarte por medio de
+              nuestro correo o solicitarlo en nuestra sección de "Servicios"
+            </p>
+            <img src="asset/Home/mail.png" alt="mail" class="contact__image">
+            contacto@azordev.com
+          </div>
+        </div>
       </main>
       <footer></footer>
       <script src="js/preloader/preloader.js"></script>
