Home more resposive

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   
   <header>
     <h1 hidden>Azordev Software</h1>
-    <nav style="position:absolute">
+    <nav>
       <a href="https://freecodecamp.org" class="logo">
         <img src="asset/azordev.png" alt="Azordev logo" />
         <!--<h1>AZORDEV</h1>--->
@@ -60,8 +60,8 @@
     <section class="hero">
       <div class="hero__container">
         <div class="hero__title">
-          <h2>BIENVENIDO A</h2>
-          <h1>AZORDEV</h1>
+          <h2 class="text-subtitle w-100">BIENVENIDO A</h2>
+          <h1 class="text-title text-md-title">AZORDEV</h1>
           <div class="hero__img-container">
             <img src="./asset/azordev.png">
           </div>
@@ -73,7 +73,7 @@
 
     <section class="services">
       <div class="services__header">
-        <h4>NUESTROS</h4>
+        <h4>Nuestros</h4>
         <h1>SERVICIOS</h1>
       </div>
       <div class="services__cardGroups">
@@ -115,6 +115,7 @@
         <div class="projects__image">
           <img src="asset/Home/CodeiceBrain.png" alt="codice brain" />
         </div>
+
         <div class="projects__explain">
           <figure class="projects__explain__codice">
             <img src="asset/Home/Codice.png" alt="codice" />
@@ -125,11 +126,11 @@
           </p>
           <button class="projects__explain__btn">CONOCER MÁS</button>
           
-          <ul style="display:flex; list-style: none;">
-            <li>#1</li>
-            <li>#1</li>
-            <li>#1</li>
-          </ul>
+          <div class="d-flex justify-end mt-h projects__pag">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
         </div>
       </div>
     </section>
@@ -145,6 +146,7 @@
       </div>
     </section>
   </main>
+-->
   <footer></footer>
   <script src="js/preloader/preloader.js"></script>
 </body>
