Change Primary Color && improved header && Contact section change image and feature responsive

--- a/index.guide..html
+++ b/index.guide..html
@@ -50,7 +50,7 @@
 
         <h3 class="text-subtitle text-c-a">Colors Brand</h3>
         <div class="d-flex">
-            <div class="bg-primary box ml">Primary: #2983AE</div>
+            <div class="bg-primary box ml">Primary: #226B8E</div>
             <div class="bg-secondary box ml">Secondary: #64B2E5</div>
             <div class="bg-alt box ml">Alter: #288ACA</div>
             <div class="bg-blued box ml">Blued: #2D95FE</div>
