feat service.html add Service page
What?: Minor changes on general layout

Breaking Changes? Changes from css/main.css to scss/main.css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="author" content="Israel Laguan" />
   <link rel="shortcut icon" href="asset/azordev.png" />
   <link href="css/preloader.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="scss/main.css" />
 </head>
 
 <body>
