test deploy no responsive

--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
       </nav>
   </header>
   <main>
-    <section class="Hero d-flex heroHome">
-      <div class="heroHome__container">
-        <div class="heroHome__title">
+    <section class="Hero Home">
+      <div class="Home__container">
+        <div class="Home__title">
           <h3 class="text-subtitle display-4">¡Bienvenido a casa!</h3>
-          <div class="heroHome__img-container">
+          <div class="Home__img-container">
             <img src="./asset/azordev.png">
             <h2 class="text-title text-md-title display-4 p-0 m-0">AZORDEV</h2>
           </div>
           <button class="btn btn-st rounded-pill btn-lg">Empezar</button>
         </div>
       </div>
-      <div class="heroHome__transparent">
+      <div class="Home__transparent">
       </div>
     </section>
 
