Cambio de texto en home
he cambiado algunos textos en la parte del home

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         <img src="./asset/KnowUs/team.svg" alt="">
       </div>
       <div>
-        <h2 class="h1">Somos un equipo</h2>
+        <h2 class="h1">Equipo azordev</h2>
         <p class="d-inline-block h4">Profesionales de diversas áreas que ponemos nuestro talento a tu servicio <br />
-          Compometidos a llevarte al exito
+          Estamos comrpometidos a llevarte al éxito
         </p>
 
 
@@ -109,7 +109,7 @@
       <div class="whyUs__explain">
         <h3>¿Porqué</h3>
         <h2>Nosotros?</h2>
-        <p>Queremos que tus proyectos digitales estén en buenas manos y que alcancen el mejor nivel en el mercado.</p>
+        <p>Los proyectos digitales.</p>
         <p>Nosotros nos encargamos que tus ideas se hagan realidad.</p>
         <button class="btn btn-bt mt">CONTÁCTANOS</button>
       </div>
