[feat] index.html: Change of #difference section' text
What?:

Breaking Changes?

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <img src="./asset/KnowUs/team.svg" alt="">
       </div>
       <div>
-        <h2 class="h1">Equipo azordev</h2>
+        <h2 class="h1">Equipo Azordev</h2>
         <p class="d-inline-block h4">Profesionales de diversas áreas que ponemos nuestro talento a tu servicio <br />
           Estamos comrpometidos a llevarte al éxito
         </p>
@@ -127,9 +127,7 @@
           </div>
           <div>
             <h2 class="text-subtitle">Escuchamos tus ideas</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aut totam voluptatem a incidunt repudiandae
-              perspiciatis alias voluptates aliquid consequuntur nesciunt, facere laudantium doloribus optio quas.
-              Blanditiis ab obcaecati doloremque.</p>
+            <p>Cualquier idea que tengas la tomamos en serio. Sabemos que el mundo esta hecho de ideas cristalizadas.</p>
           </div>
         </div>
         <div class="picture">
