Cambio imagen de aplicacion movil
Agrega una nueva imagen
Se arreglo una linea

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
           <h3>Desarrollo de Software</h2>
         </div>
         <div class="servicesCard">
-          <img src="asset/Services/Apps.png" alt="Apps" />
-          <h3>Aplicaciones Moviles</h2>
+          <img src="asset/home/teamwork.png" alt="Apps" />
+          <h3>
+            Aplicaciones Moviles
+          </h3>
         </div>
     </section>
 
