Cambios de imagen y header

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </a>
         <ul class="nav-links">
           <li class="nav-itm"><a class="text-light" href="./index.services.html">SERVICIOS</a></li>
-          <li class="nav-itm"><a class="text-light" href="#">CONOCENOS</a></li>
-          <li class="nav-itm"><a class="text-light" href="#">PORTAFOLIO</a></li>
-          <li class="nav-itm"><a class="text-light" href="#">BLOG</a></li>
+          <li class="nav-itm"><a class="text-light" href="#">HOME</a></li>
+          <li class="nav-itm"><a class="text-light" href="#">CV</a></li>
+          <li class="nav-itm"><a class="text-light" href="#">NOSOTROS</a></li>
           <li class="nav-itm"><a class="text-light" href="#">CONTACTANOS</a></li>
         </ul>
       </nav>
@@ -55,7 +55,7 @@
     <section class="Hero Home">
       <div class="Home__container">
         <div class="Home__title">
-          <h3 class="text-subtitle display-4">¡Bienvenido a casa!</h3>
+          <h3 class="text-subtitle display-4">¡Bienvenido a nuestra agencia digital!</h3>
           <div class="Home__img-container">
             <img src="./asset/azordev.png">
             <h2 class="text-title text-md-title display-4 p-0 m-0">AZORDEV</h2>
@@ -95,7 +95,7 @@
 
     <section class="WeAre">
       <div class="team-image">
-        <img src="./asset/KnowUs/team.svg" alt="">
+        <img src="./asset/Home/ambient.png" alt="">
       </div>
       <div>
         <h2 class="h1">Equipo Azordev</h2>
@@ -112,7 +112,7 @@
         <h3>¿Porqué</h3>
         <h2>Nosotros?</h2>
         <p>Los proyectos digitales.</p>
-        <p>Nosotros nos encargamos que tus ideas se hagan realidad.</p>
+        <p>Nosotros nos encargamos que tus ideas se hagan realidad y se vuelvan innovadoras.</p>
         <button class="btn btn-bt mt">CONTÁCTANOS</button>
       </div>
       <div class="whyUs__image"><img src="asset/Home/WhyUs.png" alt="why us" /></div>
